# Fancy-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  make.bat
Examples/: CMakeLists.txt  HelloTriangleApplication.cpp
Examples/Shaders/: compile.bat
Source/: IO.h
